--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "clsx": "^2.1.1",
     "jszip": "^3.10.1",
     "lucide-react": "^0.562.0",
+    "yauzl": "^3.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^3.4.0",
@@ -39,6 +40,7 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/jszip": "^3.4.1",
     "@types/react": "^18.2.64",
+    "@types/yauzl": "^2.10.0",
     "@types/react-dom": "^18.2.21",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
