--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tailwindcss/vite": "^4.1.18",
+    "@tanstack/react-query": "^5.90.19",
+    "@tanstack/react-router": "^1.151.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -62,16 +64,19 @@
     "tailwindcss": "^4.1.18",
     "vaul": "^1.1.2",
     "yauzl": "^3.1.3",
-    "zod": "^4.3.5"
+    "zod": "^4.3.5",
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
+    "@tanstack/react-query-devtools": "^5.91.2",
+    "@tanstack/router-plugin": "^1.151.5",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/jszip": "^3.4.1",
     "@types/react": "^18.2.64",
-    "@types/yauzl": "^2.10.0",
     "@types/react-dom": "^18.2.21",
+    "@types/yauzl": "^2.10.0",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
     "@vitejs/plugin-react": "^4.2.1",
