--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "postinstall": "electron-builder install-app-deps",
+    "analyze": "npx vite-bundle-analyzer"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
