Repo additions for github

--- a/.gitignore
+++ b/.gitignore
@@ -7,20 +7,44 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
+
+# Build outputs
 dist
 dist-electron
 dist-ssr
 release
+
+# Local config
 *.local
+.env
+.env.local
+.env.*.local
+
+# Test coverage
+coverage/
+*.lcov
+
+# Cache
+.cache
+.eslintcache
+*.tsbuildinfo
+
+# Temporary files
+*.tmp
+tmp/
 
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
 .idea
-.DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+# OS files
+.DS_Store
+Thumbs.db
