--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "zustand": "^5.0.10"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
     "@tanstack/react-query-devtools": "^5.91.2",
     "@tanstack/router-plugin": "^1.151.6",
     "@testing-library/jest-dom": "^6.9.1",
@@ -117,9 +118,11 @@
     "eslint": "^9.39.2",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.26",
+    "globals": "^17.0.0",
     "jsdom": "^27.4.0",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3",
+    "typescript-eslint": "^8.53.1",
     "vite": "^7.3.1",
     "vite-plugin-electron": "^0.29.0",
     "vite-plugin-electron-renderer": "^0.14.6",
