--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hymn",
   "private": true,
-  "version": "0.1.0-6-ga1e7709",
+  "version": "0.1.1",
   "description": "A modern mod manager and editor for Hytale",
   "author": {
     "name": "isa",
