--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,7 @@ jobs:
 
   build:
     name: Build (${{ matrix.os }})
+    needs: lint-and-typecheck
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
