add tests as workflow dependency for builds

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,7 @@ jobs:
 
   build:
     name: Build (${{ matrix.os }})
-    needs: lint-and-typecheck
+    needs: [lint-and-typecheck, test]
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
