--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -73,10 +73,11 @@ jobs:
         with:
           name: release-${{ matrix.platform }}
           path: |
-            release/*/*.exe
-            release/*/*.dmg
-            release/*/*.AppImage
-            release/*/*.deb
+            dist/*.exe
+            dist/*.dmg
+            dist/*.AppImage
+            dist/*.deb
+            dist/*.zip
           if-no-files-found: error
           retention-days: 1
 
