--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,23 +28,20 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v2
 
       - name: Install dependencies
-        run: npm ci
+        run: bun install --frozen-lockfile
 
       - name: Run type checking
-        run: npm run typecheck
+        run: bun run typecheck
 
       - name: Run tests
-        run: npm test
+        run: bun test
 
       - name: Build application
-        run: npm run build:compile
+        run: bun run build:compile
 
       - name: Build Electron (macOS)
         if: matrix.platform == 'mac'
@@ -52,13 +49,13 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CSC_LINK: ${{ secrets.MAC_CERTS }}
           CSC_KEY_PASSWORD: ${{ secrets.MAC_CERTS_PASSWORD }}
-        run: npx electron-builder --mac --publish never
+        run: bunx electron-builder --mac --publish never
 
       - name: Build Electron (Linux)
         if: matrix.platform == 'linux'
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: npx electron-builder --linux --publish never
+        run: bunx electron-builder --linux --publish never
 
       - name: Build Electron (Windows)
         if: matrix.platform == 'win'
@@ -66,7 +63,7 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           WIN_CSC_LINK: ${{ secrets.WIN_CERTS }}
           WIN_CSC_KEY_PASSWORD: ${{ secrets.WIN_CERTS_PASSWORD }}
-        run: npx electron-builder --win --publish never
+        run: bunx electron-builder --win --publish never
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
