--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -18,7 +18,7 @@
     "target": [
       {
         "target": "dmg",
-        "arch": ["x64", "arm64"]
+        "arch": ["arm64"]
       }
     ],
     "artifactName": "${productName}-Mac-${version}-${arch}.${ext}",
@@ -48,8 +48,7 @@
   },
   "linux": {
     "target": [
-      "AppImage",
-      "deb"
+      "AppImage"
     ],
     "artifactName": "${productName}-Linux-${version}-${arch}.${ext}",
     "category": "Game"
