feat(update): add automatic update checking and installation
Integrate electron-updater for seamless app updates via GitHub Releases.

- Add UpdateService for auto-update logic with periodic checks
- Create UpdateBanner component showing update status in header
- Add "Check for Updates" button to Settings page
- Implement update state management with Zustand store
- Support download progress tracking and restart-to-install flow
- Allow users to dismiss update notifications per version

--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -8,6 +8,11 @@
   "directories": {
     "output": "release/${version}"
   },
+  "publish": {
+    "provider": "github",
+    "owner": "isdelr",
+    "repo": "hymn"
+  },
   "files": [
     "dist",
     "dist-electron",
