--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "chokidar": "^5.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "electron-updater": "^6.7.3",
     "jszip": "^3.10.1",
     "lucide-react": "^0.562.0",
     "react": "^18.3.1",
