refactor: replace spawn with execa and add form validation
- Replace child_process.spawn with execa for cleaner async command execution
- Replace custom file system utilities with fs-extra
- Add react-hook-form with zod validation to dialog forms
- Add Form UI components and custom Sonner wrapper
- Include latest*.yml in release artifacts

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -74,6 +74,7 @@ jobs:
             release/**/*-Setup.exe
             release/**/*.dmg
             release/**/*.AppImage
+            release/**/latest*.yml
           if-no-files-found: warn
           retention-days: 1
 
