--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "analyze": "npx vite-bundle-analyzer"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@libsql/client": "^0.17.0",
     "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-accordion": "^1.2.12",
@@ -65,14 +66,19 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "electron-updater": "^6.7.3",
+    "execa": "^9.6.1",
+    "fs-extra": "^11.3.3",
     "jszip": "^3.10.1",
     "lucide-react": "^0.562.0",
+    "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.71.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
     "yauzl": "^3.1.3",
+    "zod": "^4.3.5",
     "zustand": "^5.0.10"
   },
   "devDependencies": {
@@ -82,6 +88,7 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.1",
     "@testing-library/user-event": "^14.6.1",
+    "@types/fs-extra": "^11.0.4",
     "@types/jszip": "^3.4.1",
     "@types/react": "^18.3.27",
     "@types/react-dom": "^18.3.7",
