--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "fs-extra": "^11.3.3",
     "jszip": "^3.10.1",
     "lucide-react": "^0.562.0",
+    "monaco-editor": "^0.55.1",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
