fix(build): add macOS ZIP target for auto-update support
electron-updater requires ZIP files for automatic updates on macOS.
The DMG-only configuration caused "ZIP file not provided" errors when
users clicked the update button in settings.

--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -24,6 +24,10 @@
       {
         "target": "dmg",
         "arch": ["arm64"]
+      },
+      {
+        "target": "zip",
+        "arch": ["arm64"]
       }
     ],
     "artifactName": "${productName}-Mac-${version}-${arch}.${ext}",
