feat(update): implement seamless one-click auto-updates
Replace the manual two-step update flow with VS Code-like seamless updates:
- Enable silent NSIS installer (oneClick: true) for Windows
- Add downloadAndInstall() for combined download and install action
- Use quitAndInstall(true, true) for silent install with auto-restart
- Simplify UpdateBanner to single "Update" button that handles everything

--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -47,13 +47,14 @@
     "artifactName": "${productName}-Windows-${version}-${arch}-Setup.${ext}"
   },
   "nsis": {
-    "oneClick": false,
+    "oneClick": true,
     "perMachine": false,
-    "allowToChangeInstallationDirectory": true,
+    "allowToChangeInstallationDirectory": false,
     "deleteAppDataOnUninstall": false,
     "createDesktopShortcut": true,
     "createStartMenuShortcut": true,
-    "shortcutName": "HYMN"
+    "shortcutName": "HYMN",
+    "allowElevation": true
   },
   "linux": {
     "target": [
