fix(build): resolve CI heap memory exhaustion during Vite build
- Increase Node.js heap limit to 4GB in CI/release workflows
- Remove unused Monaco workers (CSS, HTML, TypeScript) to reduce
  transform memory usage - only JSON and base editor workers needed
- Add Vite build optimizations: disable sourcemaps, chunk Monaco

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,4 +61,6 @@ jobs:
         run: bun install --frozen-lockfile
 
       - name: Build
+        env:
+          NODE_OPTIONS: "--max-old-space-size=4096"
         run: bun run build:compile
